Added power buttons on Azure maps.

--- a/scripts/docker/build
+++ b/scripts/docker/build
@@ -2,9 +2,9 @@
 set -e
 
 # Note: use lowercase names for the Docker images
-DOCKER_IMAGE="azureiotpcs/pcs-remote-monitoring-webui"
+DOCKER_IMAGE="rbachala/pcs-remote-monitoring-webui"
 # "testing" is the latest dev build, usually matching the code in the "master" branch
-DOCKER_TAG="$DOCKER_IMAGE:testing"
+DOCKER_TAG="$DOCKER_IMAGE:1.0.6"
 
 APP_HOME="$( cd "$( dirname "${BASH_SOURCE[0]}" )" && cd .. && cd .. && pwd )/"
 source "$APP_HOME/scripts/.functions.sh"
